--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "dev": "npm run clean && rollup -c -w",
     "prepublish": "npm run build"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "dependencies": {},
