--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-firebase-hooks",
+  "name": "@lucasshotgun/react-firebase-hooks",
   "version": "2.1.1",
   "description": "React Hooks for Firebase",
   "author": "CS Frequency Limited (https://csfrequency.com)",
